fix: anyoing overflow on sidebars

--- a/apps/gauzy/src/app/@theme/components/theme-sidebar/theme-settings/theme-settings.component.scss
+++ b/apps/gauzy/src/app/@theme/components/theme-sidebar/theme-settings/theme-settings.component.scss
@@ -18,6 +18,10 @@
     }
   }
 
+  nb-list{
+    overflow-y: overlay;
+  }
+
   p{
     color: nb-theme(text-primary-color);
   }
