--- a/apps/gauzy/src/app/@theme/layouts/one-column/one-column.layout.scss
+++ b/apps/gauzy/src/app/@theme/layouts/one-column/one-column.layout.scss
@@ -155,3 +155,14 @@ nb-sidebar[tag='menu-sidebar'] {
     }
   }
 }
+
+::ng-deep {
+  nb-layout
+    .layout
+    .layout-container
+    nb-sidebar
+    .main-container-fixed
+    > .scrollable {
+    overflow-y: overlay;
+  }
+}
